--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -5,7 +5,12 @@ html(lang="ko")
         link(rel="shortcut icon" href="https://cdn.worldvectorlogo.com/logos/pug.svg")
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
     body 
-        h1=pageTitle 
+        header
+            h1=pageTitle 
+            nav 
+                ul 
+                    li 
+                        a(href="/videos/upload") Upload
         main
             block content
             include partials/footer
