--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,4 +1,7 @@
 extends base.pug
 
 block content 
-    h1 Edit video!
+    h4 Change Title of the #{video.title}
+    form(method="POST")
+        input(name="title", placeholder="video title", value=video.title, required)
+        input(value="save", type="submit")
