--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -1,8 +1,9 @@
-mixin video(potato)
+mixin video(video)
     div
-        h4=potato.title
-            ul
-                li #{potato.rating}/5
-                li #{potato.comments} comments.
-                li Posted #{potato.createdAt}.
-                li #{potato.views} views.
+        h4 
+            a(href=`/videos/${video.id}`)=video.title
+        ul
+            li #{video.rating}/5
+            li #{video.comments} comments.
+            li Posted #{video.createdAt}.
+            li #{video.views} views.
