--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,4 +1,5 @@
 extends base.pug
 
 block content 
-    h1 Watch video!
+    h3 #{ video.views === 0 ? `조회수 없음` : `조회수 ${video.views}`}
+    a(href=`${video.id}/edit`) Edit Video &rarr;
