--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -3,5 +3,7 @@ extends base.pug
 block content 
     h4 Change Title of the #{video.title}
     form(method="POST")
-        input(name="title", placeholder="video title", value=video.title, required)
+        input(placeholder="video title", name="title", value=video.title, required)
+        input(placeholder="Description", name="description", value=video.description , required, type="text", maxlength="200")
+        input(placeholder="Hashtags", name="hashtags", value=video.hashtags.join(), required, type="text")
         input(value="save", type="submit")
