--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,6 +1,10 @@
 extends base
 
 block content 
+    if errorMessage 
+        span=errorMessage
     form(method="POST")
-        input(name="title", placeholder="title", required, type="text")
+        input(placeholder="Title", name="title", required, type="text", maxlength="100")
+        input(placeholder="Description", name="description", required, type="text", maxlength="200")
+        input(placeholder="Hashtags", name="hashtags", required, type="text")
         input(type="submit", value="Upload")
