--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,5 +1,7 @@
 extends base.pug
 
 block content 
-    h3 #{ video.views === 0 ? `조회수 없음` : `조회수 ${video.views}`}
+    div
+        p=video.description
+        small=video.createdAt
     a(href=`${video.id}/edit`) Edit Video &rarr;
