--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -9,8 +9,10 @@ html(lang="ko")
             h1=pageTitle 
             nav 
                 ul 
-                    li  
+                    li 
                         a(href="/") Home
+                    li 
+                        a(href="/search") Search
                     li 
                         a(href="/videos/upload") Upload
         main
