--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -10,7 +10,7 @@ block content
         input(name="password", placeholder="Password", type="password", required)
         input(name="password2", placeholder="Password Confirm", type="password", required)
         input(name="location", placeholder="Location", type="text")
-        input(type="submit", value="Join!")
+        input(type="submit", value="✨Join!")
     hr 
     div 
         span Already have an account? 
