--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -6,7 +6,9 @@ block content
     form(method="POST")
         input(name="username", placeholder="Nickname", type="text", required)
         input(name="password", placeholder="Password", type="password", required)
-        input(type="submit", value="Join!")
+        input(type="submit", value="🍒Login!")
+        br
+        a(href="/users/github/start") Continue with Github &rarr;
     hr 
     div 
         span You don't have an account? 
