--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -11,20 +11,22 @@ html(lang="ko")
                 ul 
                     li 
                         a(href="/") 🏠Home
-                    if loggedIn 
-                        li 
-                            a(href="/users/logout") 🍒Logout
-                        li 
-                            a(href=`/${loggedInUser.id}`) 📂#{loggedInUser.name} | Profile
-                    else 
-                        li 
-                            a(href="/join") ✨Join
-                        li 
-                            a(href="/login") 🍒Login
                     li 
                         a(href="/search") 🔍Search
-                    li 
-                        a(href="/videos/upload") 🎥Upload
+                    if loggedIn 
+                        li 
+                            a(href="/videos/upload") 🎥Upload
+                        li 
+                            a(href=`/${loggedInUser.id}`) 📂#{loggedInUser.name} | Profile
+                        li 
+                            a(href="/users/edit") 📚Edit Profile
+                        li 
+                            a(href="/users/logout") 🍒Logout
+                    else 
+                        li 
+                            a(href="/login") 🍒Login
+                        li 
+                            a(href="/join") ✨Join
         main
             block content
         include partials/footer
